--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -48,3 +48,45 @@ jobs:
       with:
         name: build
         path: calculator/build/
+
+  bucket:
+    name: 'Create S3 bucket'
+    runs-on: ubuntu-latest
+    needs: build
+    environment: production
+
+    defaults:
+      run:
+        shell: bash
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+      
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.region }}
+
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v2
+      with:
+        terraform_version: 1.3.2
+    
+    - name: Terraform Init
+      run: |
+        terraform init
+
+    - name: Terraform create new workspace
+      run: | 
+        terraform workspace select ${{ env.environment }} || terraform workspace new ${{ env.environment }}
+
+    - name: Terraform Plan
+      run: | 
+        terraform plan -input=false -var-file=terraform.${{ env.environment }}.tfvars -out="terraform_plan"
+
+    - name: Terraform Apply
+      run: |
+        terraform apply -auto-approve "terraform_plan"
