--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -90,3 +90,31 @@ jobs:
     - name: Terraform Apply
       run: |
         terraform apply -auto-approve "terraform_plan"
+
+  deploy:
+    name: 'Deploy'
+    runs-on: ubuntu-latest
+    environment: production
+    needs: [build, bucket]
+
+    defaults:
+      run:
+        shell: bash
+    
+    steps:    
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.region }}
+
+    - name: Download Artifacts
+      uses: actions/download-artifact@v3
+      with:
+        name: build
+        path: build
+
+    - name: Deploy S3
+      run: |
+        aws s3 sync build s3://${{ env.environment }}-${{ env.appName }}-benice --delete 
