Workflows on push in main brach

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,7 +1,9 @@
-name: 'Teste DevOps Coodesh'
+name: 'Teste DevOps Coodesh - Production'
 
 on: 
-  workflow_dispatch:
+  push:
+    branches:
+      - main
   
 permissions:
   contents: read
