--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,23 +1,25 @@
-name: 'Teste DevOps Coodesh - Staging'
+name: Workflow
 
-on: 
-  push:
-    branches-ignore:
-      - main
+on:
+  workflow_call:
+    inputs:
+      environment:
+        type: string
+        required: true
   
 permissions:
   contents: read
 
 env:
   region: us-east-2
-  environment: staging
+  environment: ${{ inputs.environment }}
   appName: calculator
 
 jobs:
   build:
     name: 'Build'
     runs-on: ubuntu-latest
-    environment: staging
+    environment: production
 
     defaults:
       run:
@@ -55,7 +57,7 @@ jobs:
     name: 'Create S3 bucket'
     runs-on: ubuntu-latest
     needs: build
-    environment: staging
+    environment: ${{ inputs.environment }}
 
     defaults:
       run:
@@ -96,7 +98,7 @@ jobs:
   deploy:
     name: 'Deploy'
     runs-on: ubuntu-latest
-    environment: staging
+    environment: ${{ inputs.environment }}
     needs: [build, bucket]
 
     defaults:
