--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: Teste DevOps Coodesh
 on:
   push:
     branches:
-      - main
+      - '*'
   workflow_dispatch:
 
 jobs:
@@ -15,7 +15,7 @@ jobs:
     secrets: inherit
 
   production:
-    if: ${{ github.event_name }} == 'push'
+    if:  ${{ github.event.action  == 'push' &&  github.ref_name == 'main' }}
     uses: ./.github/workflows/workflow.yml
     with:
       environment: production
