--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,7 +19,7 @@ jobs:
   build:
     name: 'Build'
     runs-on: ubuntu-latest
-    environment: production
+    environment: ${{ inputs.environment }}
 
     defaults:
       run:
